<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/j1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j1"/>
        <Button
            android:id="@+id/j2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j2"/>
        <Button
            android:id="@+id/j3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j3"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/j4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j4"/>
        <Button
            android:id="@+id/s5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j5"/>
        <Button
            android:id="@+id/j6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j6"/>
    </TableRow>
        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/j7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j7"/>
        <Button
            android:id="@+id/j8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j8"/>
        <Button
            android:id="@+id/j9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j9"/>
    </TableRow>
   <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/j10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j10"/>
        <Button
            android:id="@+id/j11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j11"/>
        <Button
            android:id="@+id/j12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j12"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/j13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j13"/>
        <Button
            android:id="@+id/j14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j14"/>
        <Button
            android:id="@+id/j15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/j15"/>
    </TableRow>

</TableLayout>